syntax = "proto3";
package dongle.subtitle;
option go_package = "github.com/kimsehyoung/dongle/api/proto/gen/go/subtitlepb";

import "google/api/annotations.proto";

message Video {
    string title = 1;
}
message ListVideosRequest {
    string cursor = 1;
    int32 page = 2;
    string category = 3; // {"all"}
}
message ListVideosResponse {
    repeated Video videos = 1;
    string next_cursor = 2;
}

message UploadVideoRequest {
  string name = 1;
  bytes data = 2;
}

message UploadVideoResponse {
  string id = 1;
}

// Request and response types for adding subtitles
message SubtitleVideoRequest {
  string video_id = 1;
}

message SubtitleVideoResponse {
  string status = 1;
}

service Subtitle {
    rpc ListVideos(ListVideosRequest) returns (ListVideosResponse) {
        option (google.api.http) = {
			get : "/videos"
		}; 
    };
    rpc UploadVideo (UploadVideoRequest) returns (UploadVideoResponse) {
        option (google.api.http) = {
            post: "/videos"
            body: "*"
        };
    }
    rpc DeleteVideo (UploadVideoRequest) returns (UploadVideoResponse) {
        option (google.api.http) = {
            delete: "/videos"
        };
    }

    rpc SubtitleVideo (SubtitleVideoRequest) returns (SubtitleVideoResponse) {
        option (google.api.http) = {
            post: "/v1/video/subtitle"
            body: "*"
        };
    }
}